--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,12 +16,9 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer utilities {
+  .imageBg {
+    background: url(../assets/login_img.jpg);
+    background-size: cover;
+  }
 }
